--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-project",
+  "name": "it-blog",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "~10.2.0",
+    "@angular/cli": "^13.1.2",
     "@angular/compiler-cli": "~10.2.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
