--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "it-blog",
+  "name": "first-project",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,9 +21,6 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
-    "@ngxs/devtools-plugin": "^3.7.0",
-    "@ngxs/logger-plugin": "^3.7.0",
-    "@ngxs/store": "^3.7.0",
     "bootstrap": "^4.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -31,7 +28,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "^13.1.2",
+    "@angular/cli": "~10.2.0",
     "@angular/compiler-cli": "~10.2.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
